argocd/alb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-get-href-from-10-websites
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app.kubernetes.io/name: fastapi-app-get-href-from-10-websites
  type: LoadBalancer
  loadBalancerClass: service.k8s.aws/nlb
